infrastructure/iris-edge/hermes-service.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.32.0-standalone-strict/all.json
---
apiVersion: v1
kind: Service
metadata:
  name: iris-hermes-lan
  namespace: default
spec:
  type: ClusterIP
  ports:
    - name: dashboard
      port: 9119
      targetPort: 9119
---
apiVersion: v1
kind: Endpoints
metadata:
  name: iris-hermes-lan
  namespace: default
subsets:
  - addresses:
      - ip: ${IRIS_MAC_MINI_IP}
    ports:
      - name: dashboard
        port: 9119
