infrastructure/iris-edge/ssh-vip-service.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.32.0-standalone-strict/all.json
---
apiVersion: v1
kind: Service
metadata:
  name: iris-ssh-edge
  namespace: default
  labels:
    khzaw.dev/edge-host: iris
  annotations:
    metallb.universe.tf/allow-shared-ip: iris-edge-vip
spec:
  type: LoadBalancer
  loadBalancerIP: ${IRIS_VIP}
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: ssh
      port: 22
      protocol: TCP
      targetPort: 22
---
apiVersion: v1
kind: Endpoints
metadata:
  name: iris-ssh-edge
  namespace: default
subsets:
  - addresses:
      - ip: ${IRIS_MAC_MINI_IP}
    ports:
      - name: ssh
        port: 22
